# parsearena

./: .gitignore  HDL.md  README.md  pending.md  prd_generation_prompt.md  steps.md
.cursor/rules/: parsearena.mdc
backend/: .env.example  README.md  pyproject.toml
backend/src/parsearena/: __init__.py  config.py  main.py
backend/src/parsearena/api/: deps.py  router.py
backend/src/parsearena/api/v1/: __init__.py  health.py  jobs.py  parsers.py  upload.py
backend/src/parsearena/metrics/: __init__.py  chunk_simulation.py  structural.py
backend/src/parsearena/parsers/: __init__.py  base.py  device.py  docling_parser.py  marker_parser.py  markitdown_parser.py  pymupdf4llm.py  registry.py  unstructured_parser.py
backend/src/parsearena/schemas/: __init__.py  jobs.py  metrics.py  parsers.py
backend/src/parsearena/services/: __init__.py  database.py  parser_service.py  storage.py
backend/tests/: test_device.py
docs/wiki/: API.md  Environment-Profiles.md  METHODOLOGY.md
frontend/: package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/src/: api.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: diff-summary.tsx  diff-viewer.tsx  markdown-viewer.tsx  metrics-comparison.tsx  metrics-panel.tsx  parse-progress.tsx  parser-panel.tsx  parser-selector.tsx  pdf-upload.tsx  pdf-viewer.tsx  theme-toggle.tsx  view-mode-toggle.tsx
frontend/src/components/home/: home-header.tsx  job-summary-card.tsx  workspace-toolbar.tsx
frontend/src/hooks/: use-home-keyboard-shortcuts.ts  use-media-query.ts  use-synced-pdf-page.ts
frontend/src/types/: index.ts
prds/: PHASE1.md  PHASE1_2_TODO.md  PHASE1_3_TODO.md  PHASE1_4_TODO.md  PHASE1_5_TODO.md  PHASE1_6_TODO.md  PHASE2.md  PHASE2_1_TODO.md  PHASE2_3_TODO.md  PHASE2_5_TODO.md  PHASE3.md  PHASE4.md  PRD.md
prds/phase1/: PHASE1_1_TODO.md  PHASE1_2_TODO.md  PHASE1_5_TODO.md
prds/phase2/: PHASE2.md  PHASE2_2_TODO.md
prds/phase3/: PHASE3_2_TODO.md  PHASE3_3_TODO.md
