[project]
name = "parsearena-backend"
version = "0.1.0"
description = "Backend API for ParseArena"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi",
  "pymupdf",
  "pydantic-settings",
  "python-multipart",
  "uvicorn[standard]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/parsearena"]

[tool.uv]
package = true
