[project]
name = "parsearena-backend"
version = "0.1.0"
description = "Backend API for ParseArena"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "aiosqlite",
  "fastapi",
  "pymupdf",
  "pymupdf4llm",
  "pydantic-settings",
  "python-multipart",
  "uvicorn[standard]",
  "docling>=2.95.0",
  "marker-pdf>=1.10.2",
  "unstructured[pdf]>=0.18.32",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/parsearena"]

[tool.uv]
package = true
