[project]
name = "parsearena-backend"
version = "0.1.0"
description = "Backend API for ParseArena"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "aiosqlite",
  "fastapi",
  "pymupdf",
  "pymupdf4llm",
  "pydantic-settings",
  "python-multipart",
  "uvicorn[standard]",
  "markitdown[pdf]>=0.1.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/parsearena"]

[dependency-groups]
parsers-docling = [
  "docling>=2.95.0",
]
parsers-marker = [
  "marker-pdf>=1.10.2",
]
parsers-unstructured = [
  "unstructured[pdf]>=0.18.32",
]
parsers-all = [
  { include-group = "parsers-docling" },
  { include-group = "parsers-marker" },
  { include-group = "parsers-unstructured" },
]
gpu-cuda = [
  "torch>=2.7.0,<2.8.0",
  "torchaudio>=2.7.0,<2.8.0",
  "torchvision>=0.22.0,<0.23.0",
]
gpu-mps = [
  "torch>=2.7.0,<2.8.0",
  "torchaudio>=2.7.0,<2.8.0",
  "torchvision>=0.22.0,<0.23.0",
]

[tool.uv]
package = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu128", marker = "platform_system == 'Linux'" }]
torchaudio = [{ index = "pytorch-cu128", marker = "platform_system == 'Linux'" }]
torchvision = [{ index = "pytorch-cu128", marker = "platform_system == 'Linux'" }]
